[rachio] Use zero for idle active zone number
Signed-off-by: Kovacs Istvan <kovacs.istvan77@google.com>